--- a/autoevaluacion-ia.html
+++ b/autoevaluacion-ia.html
@@ -10,7 +10,7 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            <img src="/soulspace-prototipo/logo.jpg" alt="SoulSpace" class="chat-logo">
+            <img src="logo.jpg" alt="SoulSpace" class="chat-logo">
             <div>
                 <h2>Autoevaluación con IA</h2>
                 <span class="chat-desc">Conversación privada y segura</span>
