--- a/dashboard-profesional.html
+++ b/dashboard-profesional.html
@@ -22,7 +22,7 @@
     <main class="main-prof">
         <section class="hero-prof">
             <div class="hero-img-wrap">
-                <img src="/soulspace-prototipo/perfil.jpg" alt="Profesional" class="hero-img">
+                <img src="perfil.jpg" alt="Profesional" class="hero-img">
             </div>
             <div class="hero-text">
                 <h2>Bienvenido, [Nombre Profesional]</h2>
