--- a/dashboard-rrhh.html
+++ b/dashboard-rrhh.html
@@ -13,7 +13,7 @@
     <div class="dashboard-rrhh-layout">
         <aside class="sidebar-rrhh">
             <div class="logo">
-                <img src="/soulspace-prototipo/logo.jpg" alt="SoulSpace Logo" style="height:40px;vertical-align:middle;margin-right:10px;">
+                <img src="logo.jpg" alt="SoulSpace Logo" style="height:40px;vertical-align:middle;margin-right:10px;">
                 <span>SoulSpace</span>
             </div>
             <ul class="nav-links">
