--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body class="login-bg">
     <div class="login-container half-bg">
         <div class="login-img-half">
-            <img src="/soulspace-prototipo/unnamed.jpg" alt="Ilustración SoulSpace" class="login-img-full">
+            <img src="unnamed.jpg" alt="Ilustración SoulSpace" class="login-img-full">
         </div>
         <div class="login-form-half">
             <div class="login-form-box">
-                <img src="/soulspace-prototipo/logo.jpg" alt="SoulSpace" class="login-logo" style="max-width:120px;margin-bottom:1rem;">
+                <img src="logo.jpg" alt="SoulSpace" class="login-logo" style="max-width:120px;margin-bottom:1rem;">
                 <h2>Bienvenido a SoulSpace</h2>
                 <!-- ...existing code... -->
 <form class="login-form-main" id="loginForm">
