--- a/dashboard-colaborador.html
+++ b/dashboard-colaborador.html
@@ -12,7 +12,7 @@
 <body>
     <div class="dashboard-colab-grid">
         <aside class="sidebar-colab">
-            <div class="logo"><img src="/soulspace-prototipo/logo.jpg" alt="SoulSpace Logo" style="height:40px;vertical-align:middle;margin-right:10px;">SoulSpace</div>
+            <div class="logo"><img src="logo.jpg" alt="SoulSpace Logo" style="height:40px;vertical-align:middle;margin-right:10px;">SoulSpace</div>
             <ul class="nav-links">
 
                 <li><a href="mensajes.html">Mensajes</a></li>
